--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:; script-src 'self' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https:; frame-src 'self' https:;">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -58,7 +62,8 @@
             </div>
             <iframe class="overflow-auto p-3 mb-3 bg-light rounded shadow" id="iframe-search"
                 src="/components/search.html" frameborder="0"
-                style="position: fixed; width: 100%; height: 100%; top: 65px; right: 0; display: none; background-color: white; transition: 0.3s ease;"></iframe>
+                style="position: absolute; width: 100%; height: auto; max-height: 300px; top: 100%; left: 0; z-index: 9990; background-color: rgb(255, 255, 255); display: none;">
+            </iframe>
         </header>
         <section class="hero-section">
             <div class="hero-content">
@@ -188,10 +193,10 @@
                 <p>ดูวิดีโอเพื่อทำความรู้จักกับเราและกระบวนการทำงานของเรามากขึ้น</p>
             </div>
             <div class="video-con" data-aos="fade-up">
-                <iframe src="assets/videos/FDownloader.net-1657180421715787-(1080p).mp4" title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <video width="640" height="360" controls>
+                    <source src="assets/videos/FDownloader.net-1657180421715787-(1080p).mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
             </div>
             <div class="detail-video" data-aos="fade-up">
                 <p>ไม่ว่าจะเป็นงานเล็กหรืองานใหญ่ เราพร้อมช่วยคุณเปลี่ยนไอเดียให้กลายเป็นความจริง
@@ -296,6 +301,39 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-<script src="/assets/js/database.js"></script>
+<script src="/assets/js/model/database.js"></script>
 <script src="/assets/js/index.js"></script>
+<script>
+    // Sanitize user input
+    function sanitizeInput(input) {
+        return input.replace(/[&<>"']/g, function(match) {
+            const entities = {
+                '&': '&amp;',
+                '<': '&lt;',
+                '>': '&gt;',
+                '"': '&quot;',
+                "'": '&#39;'
+            };
+            return entities[match];
+        });
+    }
+
+    // Sanitize search input
+    document.getElementById('search-input').addEventListener('input', function(e) {
+        this.value = sanitizeInput(this.value);
+    });
+
+    // Sanitize form submissions
+    document.querySelectorAll('form').forEach(form => {
+        form.addEventListener('submit', function(e) {
+            e.preventDefault();
+            const formData = new FormData(this);
+            for (let [key, value] of formData.entries()) {
+                formData.set(key, sanitizeInput(value));
+            }
+            // Continue with form submission
+            this.submit();
+        });
+    });
+</script>
 </html>
