--- a/gallery.html
+++ b/gallery.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:; script-src 'self' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:; script-src 'self' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https:; frame-src 'self' https:;">
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
     <title>แกลเลอรี่ - U-Design</title>
     <link rel="stylesheet" href="/assets/css/gallery.css">
     <link rel="icon" href="/assets/images/iconUdesign.png">
@@ -57,7 +60,7 @@
         </div>
         <iframe class="overflow-auto p-3 mb-3 bg-light rounded shadow" id="iframe-search" src="/components/search.html"
             frameborder="0"
-            style="position: absolute; width: 100%; height: auto; max-height: 300px; top: 100%; left: 0; z-index: 9990; background-color: rgb(255, 255, 255); display: none;">
+            style="position: absolute; width: 100%; height: 300px; max-height: 300px; top: 100%; left: 0; z-index: 9990; background-color: rgb(255, 255, 255); display: none;">
         </iframe>
     </header>
     <div class="container">
@@ -318,7 +321,6 @@
 </body>
 <script src="/assets/js/gallery.js"></script>
 <script>
-    // Sanitize user input
     function sanitizeInput(input) {
         return input.replace(/[&<>"']/g, function(match) {
             const entities = {
@@ -332,7 +334,6 @@
         });
     }
 
-    // Sanitize form submissions
     document.querySelectorAll('form').forEach(form => {
         form.addEventListener('submit', function(e) {
             e.preventDefault();
@@ -340,12 +341,10 @@
             for (let [key, value] of formData.entries()) {
                 formData.set(key, sanitizeInput(value));
             }
-            // Continue with form submission
             this.submit();
         });
     });
 
-    // Sanitize dynamic content
     function sanitizeHTML(html) {
         const temp = document.createElement('div');
         temp.textContent = html;
