--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
     <title>เกี่ยวกับ - U-Dsign</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/about.css">
@@ -58,7 +61,7 @@
         </div>
         <iframe class="overflow-auto p-3 mb-3 bg-light rounded shadow" id="iframe-search" src="/components/search.html"
             frameborder="0"
-            style="position: absolute; width: 100%; height: auto; max-height: 300px; top: 100%; left: 0; z-index: 9990; background-color: rgb(255, 255, 255); display: none;">
+            style="position: absolute; width: 100%; height: 300px; max-height: 300px; top: 100%; left: 0; z-index: 9990; background-color: rgb(255, 255, 255); display: none;">
         </iframe>
     </header>
     <main>
@@ -107,10 +110,10 @@
                 <h1> ศูนย์บริการครบวงจร ป้ายโลโก้ ป้ายโฆษณา อักษรโลหะ สื่อสิ่งพิมพ์โฆษณา</h1>
             </div>
             <div class="video" data-aos="fade-up">
-                <iframe width="1060" height="51 5" src="/assets/videos/FDownloader.net-1657180421715787-(1080p).mp4"
-                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
-                encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <video width="640" height="360" controls>
+                    <source src="assets/videos/FDownloader.net-1657180421715787-(1080p).mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
             </div>
         </section>
         <!-- section 4 -->
@@ -269,7 +272,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script src="/assets/js/about.js"></script>
 <script>
-    // Sanitize user input
     function sanitizeInput(input) {
         return input.replace(/[&<>"']/g, function(match) {
             const entities = {
@@ -283,7 +285,6 @@
         });
     }
 
-    // Sanitize form submissions
     document.querySelectorAll('form').forEach(form => {
         form.addEventListener('submit', function(e) {
             e.preventDefault();
@@ -291,7 +292,6 @@
             for (let [key, value] of formData.entries()) {
                 formData.set(key, sanitizeInput(value));
             }
-            // Continue with form submission
             this.submit();
         });
     });
