--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -62,7 +65,7 @@
             </div>
             <iframe class="overflow-auto p-3 mb-3 bg-light rounded shadow" id="iframe-search"
                 src="/components/search.html" frameborder="0"
-                style="position: absolute; width: 100%; height: auto; max-height: 300px; top: 100%; left: 0; z-index: 9990; background-color: rgb(255, 255, 255); display: none;">
+                style="position: absolute; width: 100%; height: 300px; max-height: 300px; top: 100%; left: 0; z-index: 9990; background-color: rgb(255, 255, 255); display: none;">
             </iframe>
         </header>
         <section class="hero-section">
@@ -304,7 +307,6 @@
 <script src="/assets/js/model/database.js"></script>
 <script src="/assets/js/index.js"></script>
 <script>
-    // Sanitize user input
     function sanitizeInput(input) {
         return input.replace(/[&<>"']/g, function(match) {
             const entities = {
@@ -318,12 +320,10 @@
         });
     }
 
-    // Sanitize search input
     document.getElementById('search-input').addEventListener('input', function(e) {
         this.value = sanitizeInput(this.value);
     });
 
-    // Sanitize form submissions
     document.querySelectorAll('form').forEach(form => {
         form.addEventListener('submit', function(e) {
             e.preventDefault();
@@ -331,7 +331,7 @@
             for (let [key, value] of formData.entries()) {
                 formData.set(key, sanitizeInput(value));
             }
-            // Continue with form submission
+
             this.submit();
         });
     });
