--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
                     <a href="/about.html">เกี่ยวกับ</a>
                     <a href="/gallery.html">แกลเลอรี่</a>
                     <a href="/contact.html">ติดต่อเรา</a>
-                    <a href="">บริการ</a>
+                    <a href="/service.html">บริการ</a>
                     <div class="tree-keed">
                         <span>☰</span>
                     </div>
@@ -54,7 +54,7 @@
             <div id="block-contact" class="line">
                 <span>ติดต่อเรา</span>
             </div>
-            <div class="line">
+            <div id="block-service" class="line">
                 <span>บริการ</span>
             </div>
         </div>
@@ -290,7 +290,7 @@
                 </div>
                 <div class="block-link">
                     <span>></span>
-                    <a href="">บริการ</a>
+                    <a href="/service.html">บริการ</a>
                 </div>
             </div>
             <div class="right-con">
