--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/index.css" />
     <link rel="icon" href="/assets/images/iconUdesign.png">
-    <title>UDesign</title>
+    <title>U-Design</title>
 </head>
 <body>
     <iframe id="loader-frame" src="/components/loader.html" frameborder="0"></iframe>
@@ -32,7 +32,7 @@
                         <a href="/about.html">เกี่ยวกับ</a>
                         <a href="/gallery.html">แกลเลอรี่</a>
                         <a href="/contact.html">ติดต่อเรา</a>
-                        <a href="">บริการ</a>
+                        <a href="/service.html">บริการ</a>
                         <div class="tree-keed">
                             <span>☰</span>
                         </div>
@@ -59,7 +59,7 @@
                 <div id="block-contact" class="line">
                     <span>ติดต่อเรา</span>
                 </div>
-                <div class="line">
+                <div id="block-service" class="line">
                     <span>บริการ</span>
                 </div>
             </div>
@@ -187,7 +187,7 @@
                 </div> -->
             </div>
             <div class="button-product" data-aos="zoom-in">
-                <button class="">ดูสินค้าทั้งหมด</button>
+                <button onclick="window.location.href='/service.html'">ดูสินค้าทั้งหมด</button>
             </div>
         </section>
         <section id="section-3">
@@ -272,7 +272,7 @@
                     </div>
                     <div class="block-link">
                         <span>></span>
-                        <a href="">บริการ</a>
+                        <a href="/service.html">บริการ</a>
                     </div>
                 </div>
                 <div class="right-con">
