--- a/service.html
+++ b/service.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:; script-src 'self' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https:; frame-src 'self' https:;">
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https:; script-src 'self' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https:; frame-src 'self' https:;">
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
     <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
-    <title>บริการทั้งหมด - U-Dsign</title>
+    <title>บริการ - U-Design</title>
     <link rel="stylesheet" href="/assets/css/service.css">
     <link rel="icon" href="/assets/images/iconUdesign.png">
 </head>
@@ -25,9 +26,9 @@
             <div class="nav-container">
                 <nav>
                     <a href="/about.html">เกี่ยวกับ</a>
+                    <a href="/service.html">บริการ</a>
                     <a href="/gallery.html">แกลเลอรี่</a>
                     <a href="/contact.html">ติดต่อเรา</a>
-                    <a href="/service.html">บริการ</a>
                     <div class="tree-keed">
                         <span>☰</span>
                     </div>
@@ -48,14 +49,14 @@
             <div id="block-about" class="line">
                 <span>เกี่ยวกับ</span>
             </div>
+            <div id="block-service" class="line">
+                <span>บริการ</span>
+            </div>
             <div id="block-gallery" class="line">
                 <span>แกลเลอรี่</span>
             </div>
             <div id="block-contact" class="line">
                 <span>ติดต่อเรา</span>
-            </div>
-            <div id="block-service" class="line">
-                <span>บริการ</span>
             </div>
         </div>
         <iframe class="overflow-auto p-3 mb-3 bg-light rounded shadow" id="iframe-search" src="/components/search.html"
@@ -64,30 +65,197 @@
         </iframe>
     </header>
     <div class="container">
-        <main>
-            <div class="main-title">
-                <h1>บริการทั้งหมด</h1>
-            </div>
-            <!-- หมวดหมู่ -->
-            <div class="nav-menu">
-                <a href="#" class="active" data-category="all">ทั้งหมด</a>
-                <a href="#" data-category="ไวนิว">ไวนิว</a>
-                <a href="#" data-category="สดิกเกอร์">สดิกเกอร์</a>
-                <a href="#" data-category="คอมโพสิท">คอมโพสิท</a>
-                <a href="#" data-category="ดิสเพลย์">ดิสเพลย์</a>
-                <a href="#" data-category="ตัวอักษรมีไฟ">ตัวอักษรมีไฟ</a>
-                <a href="#" data-category="ตัวอักษรไม่มีไฟ">ตัวอักษรไม่มีไฟ</a>
-                <a href="#" data-category="งานอื่นๆ">งานอื่นๆ</a>
-            </div>
-        </main>
+        <div class="header">
+            <h1><i class="fas fa-br"></i> บริการทั้งหมด</h1>
+            <p>ชมผลงานการออกแบบและผลิตป้ายต่างๆ ของเรา พร้อมรายละเอียดและเทคนิคการทำงาน</p>
+        </div>
 
-        <section>
-            <div class="services-container">
+        <!-- หมวดหมู่ -->
 
+        <div class="filter-tabs">
+            <button class="filter-btn active" data-filter="all">ทั้งหมด</button>
+            <button class="filter-btn" data-filter="composite">ป้ายคอมโพสิต</button>
+            <button class="filter-btn" data-filter="vinyl">ป้ายไวนิล</button>
+            <button class="filter-btn" data-filter="acrylic">ป้ายอะคริลิค</button>
+            <button class="filter-btn" data-filter="lightbox">ป้ายกล่องไฟ</button>
+            <button class="filter-btn" data-filter="sticker">สติ๊กเกอร์</button>
+
+        </div>
+
+        <div class="gallery-grid" id="galleryGrid">
+            <!-- ป้ายคอมโพสิต -->
+            <div class="gallery-item" data-category="composite">
+                <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/500710041_1285580956903754_6999663217168183644_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=107&ccb=1-7&_nc_sid=833d8c&_nc_ohc=8z5sjT6chRMQ7kNvwGZdhtF&_nc_oc=AdlItNurWeFgYW8kVkeuUJC5zooerNU3y_VDV51Ar5hPWPwspEallRl7NqONzSkcc6E&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=ZTNLr4BUI6I3oii2Irs2xA&oh=00_AfMGg6Hju3LGGdI9LygW3OABaihDgLSZob6uZ6l8X1KOww&oe=6846E821"
+                    alt="ป้ายคอมโพสิต" class="gallery-img"">
+                <div class=" gallery-info">
+                <h3>ป้ายคอมโพสิต</h3>
+                <p>ป้ายทำจากวัสดุคอมโพสิตคุณภาพสูง ทนทานต่อสภาพอากาศ เหมาะสำหรับการติดตั้งภายนอกอาคาร</p>
+                <div class="gallery-tags">
+                    <span class="tag">กันน้ำ</span>
+                    <span class="tag">ทนแสงแดด</span>
+                    <span class="tag">ภายนอก</span>
+                </div>
             </div>
-        </section>
+        </div>
+
+        <div class="gallery-item" data-category="composite">
+            <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/499552780_1281956050599578_3502205007383988445_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=833d8c&_nc_ohc=MNHtDudij80Q7kNvwEfQaod&_nc_oc=AdnBGlBzLtIjZ_ZX78c_KlIidzVcOyzTlVKtcEZ3n3-hKoYsKQJDftsCGPDcn9ymmks&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=hOfhJde9nGFUiqS1VpVlew&oh=00_AfMa6CgNIW0i9taIkERxHN4j5T0XgM2ai0qiPLsvAGgylg&oe=684DAC2C"
+                alt="คอมโพสิตติดตัวอักษรซิงค์ทำสี" class="gallery-img"">
+                <div class=" gallery-info">
+            <h3>คอมโพสิตติดตัวอักษรซิงค์ทำสี</h3>
+            <p>ป้ายคอมโพสิตสำหรับสำนักงาน ดีไซน์สวยงาม ทันสมัย ติดตั้งง่าย ใช้งานได้นาน</p>
+            <div class="gallery-tags">
+                <span class="tag">ออฟฟิศ</span>
+                <span class="tag">ทันสมัย</span>
+                <span class="tag">คุณภาพสูง</span>
+            </div>
+        </div>
     </div>
 
+    <!-- ป้ายไวนิล -->
+    <div class="gallery-item" data-category="vinyl">
+        <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/491952769_1285203656941484_9153172249648220897_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=105&ccb=1-7&_nc_sid=833d8c&_nc_ohc=X2XyYUCqagUQ7kNvwGWSxeU&_nc_oc=Adm_sHgB1bK5Z7_LDyjw4xKSnSKjQw528sMMFSfExTh4UUTr8NLlZTdg9N8u8-50NDI&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=MzVyOHq66T0M7lncvbBU6A&oh=00_AfOvaLD7QZmtNGOpZX90YCOw4rt806Of3oUUTDpVPlc76w&oe=684DA6EF"
+            alt="ป้ายไวนิล" class="gallery-img"">
+                <div class=" gallery-info">
+        <h3>ป้ายไวนิลโฆษณา</h3>
+        <p>ป้ายไวนิลคุณภาพสูง สีสดใส ทนทาน เหมาะสำหรับการโฆษณาและประชาสัมพันธ์</p>
+        <div class="gallery-tags">
+            <span class="tag">สีสดใส</span>
+            <span class="tag">ราคาประหยัด</span>
+            <span class="tag">โฆษณา</span>
+        </div>
+    </div>
+    </div>
+
+    <div class="gallery-item" data-category="vinyl">
+        <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/498115066_1277108194417697_5622833762242305733_n.jpg?stp=cp6_dst-jpg_s600x600_tt6&_nc_cat=100&ccb=1-7&_nc_sid=833d8c&_nc_ohc=FZL0PqtqUx8Q7kNvwG9X6u5&_nc_oc=AdmCszTNZffMeEBW_xhiUl3W02SpDdBhZ7OopDKpPH6b5ZLs0C7hfYNVASx5EsXvAM0&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=sNTmuoVdSkmJPASFyzl9mg&oh=00_AfOzOEwdfzI8-VpRUatBTOIfGvVjKSxKWL5xpTM1IPQJKQ&oe=6846E759"
+            alt="ไวนิลปริ้นเกรดสีUV" class="gallery-img"">
+                <div class=" gallery-info">
+        <h3>ป้ายไวนิลปริ้นเกรดสีUV</h3>
+        <p>ป้ายไวนิลปริ้นเกรดสีUV ทนแดด ทนน้ำ ไม่ลอก ไม่ซีด แม้ติดกลางแจ้ง</p>
+        <div class="gallery-tags">
+            <span class="tag">ขนาดใหญ่</span>
+            <span class="tag">ทนแดด</span>
+            <span class="tag">พิมพ์คมชัด</span>
+        </div>
+    </div>
+    </div>
+
+    <!-- ป้ายอะคริลิค -->
+    <div class="gallery-item" data-category="acrylic">
+        <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/498634219_1278374020957781_7585564512520582333_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_ohc=P34sjUyrS70Q7kNvwGeQOO3&_nc_oc=AdliIX91YR6CRRJTCDnFWMfAV-l3ks_BciXsZMoupGg_1huRCKoxmSLqh1fAiEsDCz0&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=3e_kHOo118vFjQW2M7146g&oh=00_AfMKT7xZdosgFWl9IFrbethAmm62_Q_HaorxZZJ2meC_VA&oe=684DD675"
+            alt="ป้ายอะคริลิค" class="gallery-img"">
+                <div class=" gallery-info">
+        <h3>ป้ายอะคริลิคตัวอักษร</h3>
+        <p>ป้ายอะคริลิคใสหรือสีทึบ ตัดด้วยเลเซอร์ความแม่นยำสูง ให้ความหรูหราและทันสมัย</p>
+        <div class="gallery-tags">
+            <span class="tag">ตัดเลเซอร์</span>
+            <span class="tag">หรูหรา</span>
+            <span class="tag">ทันสมัย</span>
+        </div>
+    </div>
+    </div>
+
+    <div class="gallery-item" data-category="acrylic">
+        <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/492232042_1257416913053492_6202000049913899437_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_ohc=tWeo3DycXxMQ7kNvwE7gP34&_nc_oc=AdmIOZKaS_OyI0uasRlmSKa6yBzl0NNZqFILq5ytRMCFct18j07mtLr1AJsiCINlEeg&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=vY3YrhWCke7xeg3pq8cNig&oh=00_AfPQj0x6kPPei5jpJs6odt08AXciwv3NU8jeKcCtW7wFfw&oe=6846D23E"
+            alt="ป้ายอะคริลิคไฟออกหน้า" class="gallery-img"">
+                <div class=" gallery-info">
+        <h3>ป้ายอะคริลิคไฟออกหน้า</h3>
+        <p>ป้ายอะคริลิคสำหรับบริษัท โลโก้คมชัด ดูมีระดับ เหมาะสำหรับติดตั้งในอาคารสำนักงาน</p>
+        <div class="gallery-tags">
+            <span class="tag">โลโก้</span>
+            <span class="tag">มีระดับ</span>
+            <span class="tag">บริษัท</span>
+        </div>
+    </div>
+    </div>
+
+    <!-- ป้ายกล่องไฟ -->
+    <div class="gallery-item" data-category="lightbox">
+        <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/482025291_1208920574569793_321880239582222073_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=8eJxC1KVKjoQ7kNvwGBI6N1&_nc_oc=AdmXGk_O_fW1i5Q7Nxxg5pPh8CN8vQvwkjdPoUGvkKJjT23zOMiRmXqB-BJuFNACcRM&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=ZfXcai84U7ztqnY5s8SGXw&oh=00_AfO-I6s6PfWTyzRn8kSaSeo-tZlOorWfGi00d-Uyal-AzQ&oe=684DC6FA"
+            alt="ป้ายกล่องไฟโลโก้" class="gallery-img"">
+                <div class=" gallery-info">
+        <h3>ป้ายกล่องไฟโลโก้</h3>
+        <p>ป้ายกล่องไฟ LED แบคไลท์ ให้แสงนุ่ม เด่นชัดทั้งกลางวันและกลางคืน </p>
+        <div class="gallery-tags">
+            <span class="tag">LED แบคไลท์</span>
+            <span class="tag">ประหยัดไฟ</span>
+            <span class="tag">เด่นชัด</span>
+        </div>
+    </div>
+    </div>
+
+    <div class="gallery-item" data-category="lightbox">
+        <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/492098546_1256816666446850_3840858658470751217_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=833d8c&_nc_ohc=hYqUAsM43ccQ7kNvwFmYRfE&_nc_oc=Adn8r8fiY9WmWVt-S_oUhKJTPN6MAaQt3eQBRa-pDNdysSBv35bi59h9LtB-3upwnto&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=qonW3D8nd8hVSB84jnOdKA&oh=00_AfPDN7eO-t3RTkQzRtCl1gBLEBT3waPuEq-f68TtEHJMEg&oe=6846EAD2"
+            alt="งานตู้ไฟ งานคมชัดสีสด" class="gallery-img"">
+                <div class=" gallery-info">
+        <h3>งานตู้ไฟ งานคมชัดสีสด</h3>
+        <p>ป้ายกล่องไฟ งานพิมพ์ตู้ไฟ สีสด คมชัด พรีเมียม</p>
+        <div class="gallery-tags">
+            <span class="tag">อายุการใช้งานยาวนาน</span>
+            <span class="tag">สีสด</span>
+            <span class="tag">น่าสนใจ</span>
+        </div>
+    </div>
+    </div>
+
+    <!-- สติ๊กเกอร์ -->
+    <div class="gallery-item" data-category="sticker">
+        <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/489456224_1245373257591191_3207050915438796132_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=Uyrw4PgtB_IQ7kNvwFHlJvI&_nc_oc=AdluiGUxXLJqNOU-mknSmJzb2UXFFq3Wqyq0mxzMgC1X8HNFFNk1N3pHgwllq5pfB9o&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=w8Unczr4Ha2H8shm_Mfy8g&oh=00_AfP31LllcK-P4eEhzvai05zleflbVClNRmaWETNbkkBlkQ&oe=684DC78C"
+            alt="สติ๊กเกอร์ติดรถ" class="gallery-img"">
+                <div class=" gallery-info">
+        <h3>Wrap</h3>
+        <p>สติ๊กเกอร์ติดรถคุณภาพสูง ทนความร้อน กันน้ำ ไม่ซีดจาง เหมาะสำหรับการโฆษณาเคลื่อนที่</p>
+        <div class="gallery-tags">
+            <span class="tag">ทนความร้อน</span>
+            <span class="tag">ไม่ซีดจาง</span>
+            <span class="tag">โฆษณาเคลื่อนที่</span>
+        </div>
+    </div>
+    </div>
+
+    <div class="gallery-item" data-category="sticker">
+        <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/500232227_1285226040272579_5695641663077604902_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_ohc=m4pXU17NKQEQ7kNvwEUtDGk&_nc_oc=Adkd8ILzfzv-kE2nRN4KzqOshnVnRanzIoR-x5RtCiBieF4vugCK47OCesyojvIq1sM&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=nouzCCpJRf6jSsaVkIIcSA&oh=00_AfP9TviHgemW8MTwWcBJDfmx0aAgiTIoFHIpsB-A3Hk_3w&oe=6846D1C3"
+            alt="สติ๊กเกอร์ปริ้นติดกระจก" class="gallery-img"">
+                <div class=" gallery-info">
+        <h3>ซีทรู</h3>
+        <p>สติ๊กเกอร์พิมพ์ความละเอียดสูงสำหรับติดหน้าร้าน ใสสวย ติดง่าย ไม่ทิ้งรอยกาว</p>
+        <div class="gallery-tags">
+            <span class="tag">ไม่ทิ้งรอยกาว</span>
+            <span class="tag">ความละเอียดสูง</span>
+            <span class="tag">หน้าร้าน</span>
+        </div>
+    </div>
+    </div>
+    </div>
+
+    <div class="contact-cta">
+        <h2><i class="fas fa-phone-alt"></i> สนใจสั่งทำป้าย?</h2>
+        <p>ติดต่อเราเพื่อปรึกษาและขอใบเสนอราคาฟรี ทีมงานมืออาชีพพร้อมให้คำแนะนำ</p>
+        <div class="contact-buttons">
+            <a href="https://page.line.me/myw8485r" class="contact-btn line-btn" target="_blank">
+                <i class="fab fa-line"></i>
+                ติดต่อผ่าน LINE
+            </a>
+            <a href="https://www.facebook.com/udesignplus" class="contact-btn facebook-btn" target="_blank">
+                <i class="fab fa-facebook-f"></i>
+                ติดต่อผ่าน Facebook
+            </a>
+            <a href="tel:088-7542440" class="contact-btn">
+                <i class="fas fa-phone"></i>
+                โทรหาเรา
+            </a>
+        </div>
+    </div>
+    </div>
+
+    <!-- Modal for image preview -->
+    <div class="modal" id="imageModal">
+        <span class="close-modal" onclick="closeModal()">&times;</span>
+        <div class="modal-content">
+            <img id="modalImage" src="" alt="">
+        </div>
+    </div>
     <footer>
         <div class="detail-footer">
             <div class="left-con">
@@ -151,9 +319,38 @@
             <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส</span>
         </div>
     </footer>
-
-    <script src="assets/js/model/database.js"></script>
-    <script src="assets/js/service.js"></script>
 </body>
+<script src="/assets/js/service.js"></script>
+<script>
+    function sanitizeInput(input) {
+        return input.replace(/[&<>"']/g, function (match) {
+            const entities = {
+                '&': '&amp;',
+                '<': '&lt;',
+                '>': '&gt;',
+                '"': '&quot;',
+                "'": '&#39;'
+            };
+            return entities[match];
+        });
+    }
+
+    document.querySelectorAll('form').forEach(form => {
+        form.addEventListener('submit', function (e) {
+            e.preventDefault();
+            const formData = new FormData(this);
+            for (let [key, value] of formData.entries()) {
+                formData.set(key, sanitizeInput(value));
+            }
+            this.submit();
+        });
+    });
+
+    function sanitizeHTML(html) {
+        const temp = document.createElement('div');
+        temp.textContent = html;
+        return temp.innerHTML;
+    }
+</script>
 
 </html>
