--- a/index.html
+++ b/index.html
@@ -72,43 +72,27 @@
             </iframe>
         </header>
         <section class="banner-section">
-            <div class="banner-content">
-                <div class="banner-image">
-                    <img src="https://images.unsplash.com/photo-1628258334105-2a0b3d6efee1?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                        alt="">
-                </div>
-                <div class="banner-image">
-                    <img src="https://images.unsplash.com/photo-1509966756634-9c23dd6e6815?q=80&w=1976&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                        alt="">
-                </div>
-                <div class="banner-image">
-                    <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDEwfHx8ZW58MHx8fHx8"
-                        alt="">
-                </div>
-                <div class="banner-image">
-                    <img src="https://images.unsplash.com/photo-1628258334105-2a0b3d6efee1?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                        alt="">
-                </div>
-                <div class="banner-image">
-                    <img src="https://images.unsplash.com/photo-1628258334105-2a0b3d6efee1?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                        alt="">
+            <div class="banner-wrapper">
+                <div class="banner-content">
+                    <div class="banner-image"><img
+                            src="https://images.unsplash.com/photo-1628258334105-2a0b3d6efee1?q=80&w=987" alt=""></div>
+                    <div class="banner-image"><img
+                            src="https://images.unsplash.com/photo-1509966756634-9c23dd6e6815?q=80&w=1976" alt=""></div>
+                    <div class="banner-image"><img
+                            src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?w=600" alt=""></div>
+                    <div class="banner-image"><img
+                            src="https://images.unsplash.com/photo-1628258334105-2a0b3d6efee1?q=80&w=987" alt=""></div>
+                    <div class="banner-image"><img
+                            src="https://images.unsplash.com/photo-1509966756634-9c23dd6e6815?q=80&w=1976" alt=""></div>
+                    <div class="banner-image"><img
+                            src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?w=600" alt=""></div>
                 </div>
             </div>
-            <div class="pre-next">
-                <div class="pre">
-                    <i class="fas fa-chevron-left"></i>
-                </div>
-                <div class="next">
-                    <i class="fas fa-chevron-right"></i>
-                </div>
+            <div class="controls">
+                <div class="prev">&#10094;</div>
+                <div class="next">&#10095;</div>
             </div>
-            <div class="dots">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-            </div>
+            <div class="dots"></div>
         </section>
         <section class="hero-section">
             <div class="hero-content">
