--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
             <div class="banner-wrapper">
                 <div class="banner-content">
                     <div class="banner-image"><img
-                            src="https://images.unsplash.com/photo-1628258334105-2a0b3d6efee1?q=80&w=987" alt=""></div>
+                            src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt=""></div>
                     <div class="banner-image"><img
-                            src="https://images.unsplash.com/photo-1509966756634-9c23dd6e6815?q=80&w=1976" alt=""></div>
+                            src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg" alt=""></div>
                     <div class="banner-image"><img
-                            src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?w=600" alt=""></div>
+                            src="assets/images/492004574_1251746080287242_8926551003989382569_n.jpg" alt=""></div>
                     <div class="banner-image"><img
-                            src="https://images.unsplash.com/photo-1628258334105-2a0b3d6efee1?q=80&w=987" alt=""></div>
+                            src="assets/images/495236393_1265238942271289_8009203848911221858_n.jpg" alt=""></div>
                     <div class="banner-image"><img
-                            src="https://images.unsplash.com/photo-1509966756634-9c23dd6e6815?q=80&w=1976" alt=""></div>
+                            src="assets/images/500407055_1285581083570408_7088848512085273310_n (1).jpg" alt=""></div>
                     <div class="banner-image"><img
-                            src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?w=600" alt=""></div>
+                            src="assets/images/Hitube_U9ZSz2g8xd_2025_06_10_16_24_58.jpg" alt=""></div>
                 </div>
             </div>
             <div class="controls">
