--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                 <h1 class="form-head">ติดต่อเรา</h1>
                 <div class="qr-container">
                     <div class="qr-code">
-                        <div class="qr-image"><img src="/assets/images/qrcode.jpg" width="100%" height="100%"
+                        <div class="qr-image"><img src="assets/images/w750.jpg" width="100%" height="100%"
                                 style="object-fit: cover;"></div>
                     </div>
                 </div>
